# spec-kit

./: ANTIGRAVITY_USAGE_GUIDE.md  CHANGELOG.md  README.md  TRAE_USAGE_GUIDE.md  pyproject.toml
extensions/: catalog.community.json
presets/: catalog.community.json
src/specify_cli/: __init__.py
src/specify_cli/integrations/: base.py
src/specify_cli/integrations/codex/: __init__.py
src/specify_cli/integrations/copilot/: __init__.py
src/specify_cli/workflows/: __init__.py  base.py  catalog.py  engine.py  expressions.py
src/specify_cli/workflows/steps/: __init__.py
src/specify_cli/workflows/steps/command/: __init__.py
src/specify_cli/workflows/steps/do_while/: __init__.py
src/specify_cli/workflows/steps/fan_in/: __init__.py
src/specify_cli/workflows/steps/fan_out/: __init__.py
src/specify_cli/workflows/steps/gate/: __init__.py
src/specify_cli/workflows/steps/if_then/: __init__.py
src/specify_cli/workflows/steps/prompt/: __init__.py
src/specify_cli/workflows/steps/shell/: __init__.py
src/specify_cli/workflows/steps/switch/: __init__.py
src/specify_cli/workflows/steps/while_loop/: __init__.py
tests/: test_workflows.py
tests/integrations/: test_cli.py  test_integration_base_markdown.py  test_integration_base_skills.py  test_integration_base_toml.py  test_integration_base_yaml.py  test_integration_copilot.py  test_integration_generic.py
workflows/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.community.json  catalog.json
